; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdkfd/extr_kfd_events.c_kfd_set_event.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/amd/amdkfd/extr_kfd_events.c_kfd_set_event.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kfd_process = type { i32 }
%struct.kfd_event = type { i32 }

@EINVAL = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @kfd_set_event(%struct.kfd_process* %0, i32 %1) #0 {
  %3 = alloca %struct.kfd_process*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  %6 = alloca %struct.kfd_event*, align 8
  store %struct.kfd_process* %0, %struct.kfd_process** %3, align 8
  store i32 %1, i32* %4, align 4
  store i32 0, i32* %5, align 4
  %7 = load %struct.kfd_process*, %struct.kfd_process** %3, align 8
  %8 = getelementptr inbounds %struct.kfd_process, %struct.kfd_process* %7, i32 0, i32 0
  %9 = call i32 @mutex_lock(i32* %8)
  %10 = load %struct.kfd_process*, %struct.kfd_process** %3, align 8
  %11 = load i32, i32* %4, align 4
  %12 = call %struct.kfd_event* @lookup_event_by_id(%struct.kfd_process* %10, i32 %11)
  store %struct.kfd_event* %12, %struct.kfd_event** %6, align 8
  %13 = load %struct.kfd_event*, %struct.kfd_event** %6, align 8
  %14 = icmp ne %struct.kfd_event* %13, null
  br i1 %14, label %15, label %22

15:                                               ; preds = %2
  %16 = load %struct.kfd_event*, %struct.kfd_event** %6, align 8
  %17 = call i64 @event_can_be_cpu_signaled(%struct.kfd_event* %16)
  %18 = icmp ne i64 %17, 0
  br i1 %18, label %19, label %22

19:                                               ; preds = %15
  %20 = load %struct.kfd_event*, %struct.kfd_event** %6, align 8
  %21 = call i32 @set_event(%struct.kfd_event* %20)
  br label %25

22:                                               ; preds = %15, %2
  %23 = load i32, i32* @EINVAL, align 4
  %24 = sub nsw i32 0, %23
  store i32 %24, i32* %5, align 4
  br label %25

25:                                               ; preds = %22, %19
  %26 = load %struct.kfd_process*, %struct.kfd_process** %3, align 8
  %27 = getelementptr inbounds %struct.kfd_process, %struct.kfd_process* %26, i32 0, i32 0
  %28 = call i32 @mutex_unlock(i32* %27)
  %29 = load i32, i32* %5, align 4
  ret i32 %29
}

declare dso_local i32 @mutex_lock(i32*) #1

declare dso_local %struct.kfd_event* @lookup_event_by_id(%struct.kfd_process*, i32) #1

declare dso_local i64 @event_can_be_cpu_signaled(%struct.kfd_event*) #1

declare dso_local i32 @set_event(%struct.kfd_event*) #1

declare dso_local i32 @mutex_unlock(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
